<resources>
    <string name="app_name">PowerEnglish</string>
    <string name="button_dictionary">Dictionary</string>
    <string name="button_learn_pl">Learn PL->EN</string>
    <string name="button_learn_en">Learn EN->PL</string>
    <string name="button_about">About</string>
    <string name="add_action">Add</string>
    <string name="del_action">Delete</string>
    <string name="edit_action">Edit</string>
    <string name="copy_action">Copy</string>
    <string name="select_action">Select All</string>
    <string name="about_description">The application allows to you learn English language.
    It does not contain any set of words by default, except the test one.
    The goal of the application is to learn words or phrases defined by user, so you can simply
        define your lists of words which you want to learn.</string>
    <string name="about_author">Mariusz Powroźnik</string>
    <string name="about_email">m.powroznik78@gmail.com</string>
    <string name="pref_header_general_info">General information</string>
    <string name="pref_header_settings">Settings</string>
    <string name="title_activity_settings">Title settings</string>

    <string-array name="level">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
    </string-array>
    <string-array name="level_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


</resources>
